--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "expo": "~54.0.13",
     "expo-auth-session": "~7.0.8",
+    "expo-av": "^16.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
@@ -34,12 +36,14 @@
     "expo-modules-core": "^3.0.21",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.11",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "^29.0.12",
+    "expo-video": "~3.0.13",
     "expo-web-browser": "~15.0.8",
     "firebase": "^12.4.0",
     "nativewind": "^4.2.1",
